Sorted layout issue

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -274,7 +274,7 @@ h2 {
 }
 
 #hourly-forecast-div, #weekly-forecast-div {
-    padding: 20px;
+    padding: 18px;
 }
 
 #weekly-forecast-div {
